src/test/deca/codegen/invalid/resultats/heapoverflow-ima.res
Erreur : Le tas est plein
